--- a/BetterGeoscape/Assets/Localization/PR_CH_Story_Localization.csv
+++ b/BetterGeoscape/Assets/Localization/PR_CH_Story_Localization.csv
@@ -72,18 +72,18 @@ While all medical facilities have been equipped with the necessary equipment, th
 In addition, our experiments have revealed that the Specimen 2, under the right stimulation, is capable of producing other biochemical compounds that may be of use in the battlefield. We recommend allocating additional resources to this research.",,,,,,,,
 PX_ORIGINAL_ACHERON_RESEARCHDEF_NAME,Text,,Specimen 2,,,,,,,,
 PX_ORIGINAL_ACHERON_RESEARCHDEF_UNLOCK,Text,,"We have captured Specimen 2, the Acheron infected with the RDNA virus that holds the key to creating a treatment for the Oneiric Delirium.",,,,,,,,
-KEY_STATUS_CORRUPTED_NAME,Text,,Delirium,,,,,,,,
+DLC4 Hypnos/KEY_STATUS_CORRUPTED_NAME,Text,,Delirium,,,,,,,,
 KEY_STATUS_CORRUPTED_DESCRIPTION,Text,,"For now, Will Power is reduced by the current level of Delirium. Additionally, damage done increases by 2% for every 1 point of delirium. But it can be so much more! Better Pandoravirus now!",,,,,,,,
 KEY_CO_CORRUPTION_NAME,Text,,Co-Delirium,,,,,,,,
 KEY_CO_CORRUPTION_DESCRIPTION,Text,,All Pandorans in battle deal Delirium damage,,,,,,,,
 KEY_CONTACT_CORRUPTION_NAME,Text,,CONTACT DELIRIUM,,,,,,,,
 KEY_CONTACT_CORRUPTION_DESCRIPTION,Text,,Increases Delirium of attacker when suffering Melee or Bash attacks.,,,,,,,,
-KEY_DAMAGE_TYPE_CORRUPTION,Text,not working?,DELIRIUM,,,,,,,,
+DLC4 Hypnos/KEY_DAMAGE_TYPE_CORRUPTION,Text,,DELIRIUM,,,,,,,,
 KEY_DAMAGE_TYPE_CORRUPTION_DESC,Text,,Applies Delirium to the target.,,,,,,,,
 KEY_CORRUPTION_IMMUNITY_NAME,Text,,DELIRIUM IMMUNITY,,,,,,,,
 KEY_CORRUPTION_IMMUNITY_DESCRIPTION,Text,,Immune to Delirium.,,,,,,,,
-KEY_BRIEFING_INFECTED_AREA,Text,,DELIRIUM AREA,,,,,,,,
-KEY_CORRUPTION_STATUS,Text,not working,DELIRIUM STATUS,,,,,,,,
+DLC4 Hypnos/KEY_BRIEFING_INFECTED_AREA,Text,,DELIRIUM AREA,,,,,,,,
+DLC4 Hypnos/KEY_CORRUPTION_STATUS,Text,,DELIRIUM STATUS,,,,,,,,
 KEY_CORRUPTION_TICK_NOTIFICATION,Text,,The level of corruption has increased among the sick.,,,,,,,,
 KEY_CORRUPTIVE_ATTACK_DESCRIPTION,Text,,Successful attacks spread delirium to organic units.,,,,,,,,
 KEY_CORRUPTIVE_ATTACK_NAME,Text,,DELIRIUM ATTACK,,,,,,,,
